vpn/network/network.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create Entire VPN Network

Parameters:
  VPCCidr:
    Type: String

  VPNTrustIp:
    Type: String

  NTPServerIp:
    Type: String

  DomainName:
    Type: String

  VPNUntrustSubnetCidr:
    Type: String

  VPNTrustSubnetCidr:
    Type: String

  PrivateSubnetCidr:
    Type: String

  PublicSubnetCidr:
    Type: String

  EndpointSubnetCidr:
    Type: String

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-VPC
 
  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-IGW

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # DHCP Option set
  DHCPOptionSet:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !Ref DomainName
      DomainNameServers:
        - !Ref VPNTrustIp
        - 8.8.8.8
      NtpServers:
        - !Ref NTPServerIp
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-DOS

  DHCPOptionSetAttachment:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPC
      DhcpOptionsId: !Ref DHCPOptionSet

  # Subnet
  VPNUntrustSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref VPNUntrustSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-VpnUntrust

  VPNTrustSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref VPNTrustSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-VpnTrust

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Private

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Public

  EndpointSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref EndpointSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Endpoint

  # Route Table
  VPNUntrustRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-VpnUntrust

  VPNUntrustRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPNUntrustRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  VPNUntrustRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNUntrustRouteTable
      SubnetId: !Ref VPNUntrustSubnet

  VPNTrustRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-VpnTrust

  VPNTrustRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNTrustRouteTable
      SubnetId: !Ref VPNTrustSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Private

  PrivateRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Public

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  EndpointRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: vpn
        - Key: Name
          Value: VPN-Endpoint

  EndpointRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EndpointRouteTable
      SubnetId: !Ref EndpointSubnet

  # Endpoint
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
        "Version": "2012-10-17",
        "Statement":[{
          "Effect": "Allow",
          "Principal": "*",
          "Action": "*",
          "Resource": "*"
        }]
      }'
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: VPCId

  VPNUntrustSubnetId:
    Value: !Ref VPNUntrustSubnet

  VPNTrustSubnetId:
    Value: !Ref VPNTrustSubnet

  PrivateSubnetId:
    Value: !Ref PrivateSubnet
    Export:
      Name: PrivateSubnetId

  PublicSubnetId:
    Value: !Ref PublicSubnet
    Export:
      Name: PublicSubnetId

  EndpointSubnetId:
    Value: !Ref EndpointSubnet
    Export:
      Name: EndpointSubnetId

  PrivateRouteTableId:
    Value: !Ref PrivateRouteTable

  PublicRouteTableId:
    Value: !Ref PublicRouteTable
